--- a/index.html
+++ b/index.html
@@ -2,41 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Movies</title>
+    <!-- Add Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-<div class="loading-center">
-<div class="pl">
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__dot"></div>
-    <div class="pl__text">Loading…</div>
-</div>
-</div>
-<div class="movie-list">
-    <h1>Movies</h1>
-    <ul id="movie-list-container">
-        <!-- Movie items will be added here -->
-    </ul>
-    <form id="add-movie-form">
-        <label for="title">Title:</label>
-        <input type="text" id="title" required>
-        <label for="rating">Rating:</label>
-        <input type="number" id="rating" min="1" max="5" required>
-        <button type="submit">Add Movie</button>
-    </form>
+<div class="container">
+    <div class="loading-center">
+        <!-- Loading animation if needed -->
+    </div>
+    <div class="movie-list">
+        <h1 class="mt-4">Movies</h1>
+        <div class="row" id="movie-list-container">
+            <!-- Movie cards will be added here -->
+        </div>
+        <form id="add-movie-form" class="mt-4">
+            <div class="mb-3">
+                <label for="title" class="form-label">Title:</label>
+                <input type="text" class="form-control" id="title" required>
+            </div>
+            <div class="mb-3">
+                <label for="rating" class="form-label">Rating:</label>
+                <input type="number" class="form-control" id="rating" min="1" max="5" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Add Movie</button>
+        </form>
+    </div>
 </div>
 
-</body>
 <script type="module" src="js/main.js"></script>
+</body>
 </html>
