--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
     </div>
 </div>
 
+<div id="editForm" class="edit-form">
+    <h2>Edit Movie</h2>
+    <form id="movieEditForm">
+        <label for="editTitle">Title:</label>
+        <input type="text" id="editTitle" required>
+
+        <label for="editRating">Rating:</label>
+        <input type="number" id="editRating" min="1" max="10" required>
+
+        <label for="editGenre">Genre:</label>
+        <input type="text" id="editGenre" required>
+
+        <label for="editSummary">Summary:</label>
+        <textarea id="editSummary" rows="4" required></textarea>
+
+        <button type="button" id="saveEdit">Save</button>
+    </form>
+</div>
+
 <script type="module" src="js/main.js"></script>
 </body>
 </html>
