fixed delete button generation

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <textarea id="editSummary" rows="4" required></textarea>
 
         <button type="button" id="saveEdit">Save</button>
+        <button class="btn btn-danger btn-delete" id="deleteButton">Delete</button>
     </form>
 </div>
 
