--- a/index.html
+++ b/index.html
@@ -5,26 +5,42 @@
     <title>Movies</title>
     <!-- Add Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Add your custom CSS -->
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
     <div class="loading-center">
         <!-- Loading animation if needed -->
+        <div class="pl">
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+            <div class="pl__dot"></div>
+        </div>
+        <div class="pl__text">Loading</div>
     </div>
     <div class="movie-list">
-        <h1 class="mt-4">Movies</h1>
+        <h1 class="mt-4 movie-header">Movies</h1>
         <div class="row" id="movie-list-container">
             <!-- Movie cards will be added here -->
         </div>
-        <form id="add-movie-form" class="mt-4">
-            <div class="mb-3">
-                <label for="title" class="form-label">Title:</label>
-                <input type="text" class="form-control" id="title" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Add Movie</button>
-        </form>
     </div>
+    <form id="add-movie-form" class="mt-4">
+        <div class="mb-3">
+            <label for="title" class="form-label">Title:</label>
+            <input type="text" class="form-control" id="title" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Movie</button>
+    </form>
 </div>
 
 <div id="editForm" class="edit-form">
@@ -47,6 +63,7 @@
     </form>
 </div>
 
+<!-- Include your JavaScript at the end -->
 <script type="module" src="js/main.js"></script>
 </body>
 </html>
