--- a/index.html
+++ b/index.html
@@ -27,6 +27,43 @@
             <div class="pl__dot"></div>
         </div>
     </div>
+<!--    <label class="switch">-->
+<!--        <input type="checkbox" id="darkModeToggle">-->
+<!--        <span class="slider round"></span>-->
+<!--    </label>-->
+    <label class="bb8-toggle mt-5">
+        <input class="bb8-toggle__checkbox" type="checkbox" id="darkModeToggle">
+        <div class="bb8-toggle__container">
+            <div class="bb8-toggle__scenery">
+                <div class="bb8-toggle__star"></div>
+                <div class="bb8-toggle__star"></div>
+                <div class="bb8-toggle__star"></div>
+                <div class="bb8-toggle__star"></div>
+                <div class="bb8-toggle__star"></div>
+                <div class="bb8-toggle__star"></div>
+                <div class="bb8-toggle__star"></div>
+                <div class="tatto-1"></div>
+                <div class="tatto-2"></div>
+                <div class="gomrassen"></div>
+                <div class="hermes"></div>
+                <div class="chenini"></div>
+                <div class="bb8-toggle__cloud"></div>
+                <div class="bb8-toggle__cloud"></div>
+                <div class="bb8-toggle__cloud"></div>
+            </div>
+            <div class="bb8">
+                <div class="bb8__head-container">
+                    <div class="bb8__antenna"></div>
+                    <div class="bb8__antenna"></div>
+                    <div class="bb8__head"></div>
+                </div>
+                <div class="bb8__body"></div>
+            </div>
+            <div class="artificial__hidden">
+                <div class="bb8__shadow"></div>
+            </div>
+        </div>
+    </label>
     <div class="movie-list">
         <h1 class="mt-4 movie-header">Movies App</h1>
         <form id="add-movie-form" class="mt-4">
@@ -36,10 +73,26 @@
             </div>
             <button type="submit" class="btn btn-primary">Add Movie</button>
         </form>
+        <!-- Add this inside the <div class="container"> -->
+        <div class="search-container">
+            <input type="text" id="searchTitle" placeholder="Search by Title">
+            <select id="searchGenre">
+                <!-- Populate this dropdown dynamically using JavaScript -->
+            </select>
+            <button id="searchButton">Search</button>
+        </div>
+
+        <div id="searchResultsPopup" class="search-results-popup">
+            <!-- Results will be dynamically added here -->
+            <button id="cancelSearch">Cancel</button>
+        </div>
+
         <div class="row" id="movie-list-container">
             <!-- Movie cards will be added here -->
         </div>
+
     </div>
+
 </div>
 
 <div id="editForm" class="edit-form">
