--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="pl__dot"></div>
         </div>
     </div>
-<!--    <label class="switch">-->
-<!--        <input type="checkbox" id="darkModeToggle">-->
-<!--        <span class="slider round"></span>-->
-<!--    </label>-->
+    <!--    <label class="switch">-->
+    <!--        <input type="checkbox" id="darkModeToggle">-->
+    <!--        <span class="slider round"></span>-->
+    <!--    </label>-->
     <label class="bb8-toggle mt-5">
         <input class="bb8-toggle__checkbox" type="checkbox" id="darkModeToggle">
         <div class="bb8-toggle__container">
@@ -78,7 +78,14 @@
             <input type="text" id="searchTitle" placeholder="Search by Title">
             <select id="searchGenre">
                 <!-- Populate this dropdown dynamically using JavaScript -->
+
             </select>
+            <label for="searchRating">Rating:</label>
+            <select id="searchRating">
+                <option value="">Any</option>
+            </select>
+
+
             <button id="searchButton">Search</button>
         </div>
 
