--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Add your custom CSS -->
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -65,7 +68,7 @@
         </div>
     </label>
     <div class="movie-list">
-        <h1 class="mt-4 movie-header">Movies App</h1>
+        <h1 class="mt-4 movie-header">Wookie Media</h1>
         <form id="add-movie-form" class="mt-4">
             <div class="mb-3">
                 <label for="title" class="form-label">Title:</label>
