--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link href="css/styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    <h1 class="mt-4 movie-header">Wookie Media</h1>
-    <div class="search-container">
+    <h1 class="mt-4 movie-header"><span style="font-size: 64px">Wookie Media</span></h1>
+    <div class="search-container" style="position: absolute; top: 30px; right: 25px">
 
         <div class="form-group">
             <label for="searchTitle">Title:</label>
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <div class="search-container">
+    <div class="search-container" style="position: absolute; top: 110px; right: 25px;">
         <button id="searchButton" class="btn btn-primary">Search</button>
     </div>
 
@@ -97,7 +97,7 @@
             <div class="pl__dot"></div>
         </div>
     </div>
-    <div class="movie-list">
+    <div class="movie-list" style="margin-top: 3.5rem">
 
         <form id="add-movie-form" class="mt-4">
             <div class="mb-3">
