completed the sort functionality and added a runtime text.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <div class="pl__dot"></div>
         </div>
     </div>
+
     <div class="movie-list" style="margin-top: 3.5rem">
 
         <form id="add-movie-form" class="mt-4">
@@ -106,6 +107,18 @@
             </div>
             <button type="submit" class="btn btn-primary">Add Movie</button>
         </form>
+        <div class="container">
+            <div class="search-container">
+                <label for="sort">Sort by:</label>
+                <select id="sort">
+                    <option value="title_asc">Title (A-Z)</option>
+                    <option value="title_desc">Title (Z-A)</option>
+                    <option value="rating_asc">Rating (Low to High)</option>
+                    <option value="rating_desc">Rating (High to Low)</option>
+                    <option value="runtime_asc">Runtime (Shortest to Longest)</option>
+                    <option value="runtime_desc">Runtime (Longest to Shortest)</option>
+                </select>
+            </div></div>
         <!-- Add this inside the <div class="container"> -->
 
 
@@ -117,11 +130,12 @@
 
 </div>
 
+
 <div id="editForm" class="edit-form">
     <h2>Edit Movie</h2>
     <form id="movieEditForm">
         <label for="editTitle">Title:</label>
-        <input type="text" id="editTitle" required>
+        <input type="text" id="editTitle" />
 
         <label for="editRating">Rating:</label>
         <input type="number" id="editRating" min="1" max="10" required>
@@ -132,7 +146,10 @@
         <label for="editSummary">Summary:</label>
         <textarea id="editSummary" rows="4" required></textarea>
 
-        <button type="button" id="saveEdit">Save</button>
+        <label for="editRuntime">Runtime:</label>
+        <input id="editRuntime" type="text">
+
+        <button id="saveEdit" class="btn btn-primary">Save</button>
         <button class="btn btn-danger btn-delete" id="deleteButton">Delete</button>
     </form>
 </div>
