--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+    <!-- Add Bootstrap CSS -->
+
+    <!-- Add Bootstrap JavaScript (Popper.js is required for some Bootstrap components) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <div class="container">
@@ -153,6 +160,30 @@
         <button class="btn btn-danger btn-delete" id="deleteButton">Delete</button>
     </form>
 </div>
+<!--this should be the feature movie carousel-->
+<!--<div class="container text-center">-->
+<!--    <div class="pagination">-->
+<!--        <button id="prevPage" class="btn btn-primary">Previous</button>-->
+<!--        <span id="currentPage">Page 1</span>-->
+<!--        <button id="nextPage" class="btn btn-primary">Next</button>-->
+<!--    </div>-->
+<!--</div>-->
+<div class="container text-center">
+    <div class="row">
+        <div class="col-md-6">
+            <button id="prevPage" class="btn btn-primary">Previous</button>
+        </div>
+        <div class="col-md-6">
+            <button id="nextPage" class="btn btn-primary">Next</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <span id="currentPage">Page 1</span>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Include your JavaScript at the end -->
 <script type="module" src="js/main.js"></script>
